[5319] Feed on mobile: function frontend and fix frontend UI

--- a/frontend/web/less/desktop/post.less
+++ b/frontend/web/less/desktop/post.less
@@ -799,6 +799,11 @@
                 .topic-title {
                     font-size: 16px;
                     color:#1d1b1b;
+                    width: 300px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: inline-block;
                     &:hover {
                         color: #5da5d8;
                     }
@@ -854,9 +859,16 @@
                     margin-left: 60px;
                     width: 550px;
                     .post-title {
+                        &::before{
+                            content: '#';
+                        }
                         font-size: 16px;
                         color:#1d1b1b;
                         font-family: "ProximaNovaSemibold";
+                        width: 500px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                     .post-content {
                         font-size: 13px;
